--- a/src/main/resources/changepassword.fxml
+++ b/src/main/resources/changepassword.fxml
@@ -2,31 +2,31 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.ChangePassword">
    <children>
       <Label layoutX="200.0" layoutY="134.0" prefHeight="307.0" prefWidth="400.0" style="-fx-border-color: black;" />
-      <Button fx:id="backBtn" layoutX="374.0" layoutY="483.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" text="Back" />
-      <Button fx:id="changeBtn" layoutX="369.0" layoutY="386.0" mnemonicParsing="false" text="Change" />
-      <TextField layoutX="395.0" layoutY="275.0" />
-      <TextField layoutX="395.0" layoutY="317.0" />
-      <TextField layoutX="395.0" layoutY="232.0" />
       <Label layoutX="224.0" layoutY="145.0" prefHeight="100.0" text="Change Password">
          <font>
             <Font name="Mitr Medium" size="40.0" />
          </font>
       </Label>
+      <Button fx:id="backBtn" layoutX="380.0" layoutY="483.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" text="Back" />
+      <Button fx:id="changeBtn" layoutX="372.0" layoutY="364.0" mnemonicParsing="false" onAction="#handleChangeBtnOnAction" text="Change" />
+      <TextField fx:id="usernameField" layoutX="401.0" layoutY="232.0" />
       <Label layoutX="249.0" layoutY="236.0" text="Username" />
       <Label layoutX="249.0" layoutY="279.0" text="New Password" />
       <Label layoutX="249.0" layoutY="321.0" text="Comfirm Password" />
-      <Label layoutX="344.0" layoutY="80.0" text="in progresss...">
+      <Label fx:id="progressLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="251.0" layoutY="400.0" prefHeight="30.0" prefWidth="300.0" textAlignment="CENTER">
          <font>
             <Font name="Mitr Medium" size="15.0" />
          </font>
       </Label>
+      <PasswordField fx:id="newPassField" layoutX="401.0" layoutY="275.0" />
+      <PasswordField fx:id="confirmField" layoutX="401.0" layoutY="317.0" />
    </children>
 </AnchorPane>
