--- a/src/main/resources/developer.fxml
+++ b/src/main/resources/developer.fxml
@@ -9,17 +9,17 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.Developer">
    <children>
-      <Label layoutX="451.0" layoutY="137.0" text="Develop by">
+      <Label layoutX="438.0" layoutY="138.0" text="Developed by">
          <font>
             <Font name="Mitr Medium" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="142.0" layoutY="55.0" text="The Elite Condo">
+      <Label layoutX="235.0" layoutY="56.0" text="The Elite Box">
          <font>
             <Font name="Mitr Medium" size="50.0" />
          </font>
       </Label>
-      <Label layoutX="142.0" layoutY="162.0" prefHeight="392.0" prefWidth="222.0" style="-fx-background-color: black;" text="Profile" textAlignment="CENTER">
+      <Label layoutX="142.0" layoutY="162.0" prefHeight="366.0" prefWidth="222.0" style="-fx-background-color: black;" text="Profile" textAlignment="CENTER">
          <font>
             <Font name="Mitr Medium" size="12.0" />
          </font>
