--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.Login">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.Login">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -21,9 +21,9 @@
       <AnchorPane prefHeight="600.0" prefWidth="800.0">
          <children>
             <Label layoutX="203.0" layoutY="180.0" prefHeight="240.0" prefWidth="400.0" style="-fx-border-color: black;" />
-            <Button fx:id="loginBtn" defaultButton="true" layoutX="376.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleLoginBtnOnAction" text="Log in" />
             <TextField fx:id="usernameField" layoutX="376.0" layoutY="270.0" />
             <PasswordField fx:id="passwordField" layoutX="376.0" layoutY="316.0" />
+            <Button fx:id="loginBtn" defaultButton="true" layoutX="376.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleLoginBtnOnAction" text="Log in" />
             <Label layoutX="241.0" layoutY="197.0" prefHeight="50.0" text="Welcome to Elite Box">
                <font>
                   <Font name="Mitr Medium" size="30.0" />
