--- a/src/main/resources/adminmenupage.fxml
+++ b/src/main/resources/adminmenupage.fxml
@@ -10,19 +10,22 @@
 <AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.admin.AdminMenuController">
    <children>
       <Label layoutY="144.0" prefHeight="100.0" prefWidth="801.0" style="-fx-border-color: black;" />
-      <Label layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER">
          <font>
-            <Font name="Mitr Medium" size="30.0" />
+            <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out" />
-      <Label fx:id="nameLabel" alignment="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out">
          <font>
-            <Font name="Mitr Medium" size="20.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font></Button>
+      <Label fx:id="nameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
-      <Label fx:id="idLabel" alignment="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
+      <Label fx:id="idLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
          <font>
-            <Font name="Mitr Medium" size="20.0" />
+            <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
       <TableView fx:id="staffTable" layoutX="74.0" layoutY="282.0" prefHeight="283.0" prefWidth="654.0">
         <columns>
@@ -38,9 +41,9 @@
             <Font name="Mitr Medium" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="addStaffBtn" layoutX="180.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddStaffBtnOnAction" prefHeight="50.0" prefWidth="85.0" text="Add Staff">
+      <Button fx:id="addStaffBtn" layoutX="207.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleAddStaffBtnOnAction" prefHeight="50.0" prefWidth="85.0" text="Add Staff">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
       <Button fx:id="profileBtn" layoutX="320.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: none;">
@@ -48,9 +51,9 @@
             <Font name="Mitr Medium" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="changePassBtn" layoutX="447.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="126.0" text="Change Password">
+      <Button fx:id="changePassBtn" layoutX="474.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="126.0" text="Change Password">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
    </children>
