--- a/src/main/resources/loginpage.fxml
+++ b/src/main/resources/loginpage.fxml
@@ -23,10 +23,13 @@
             <Label layoutX="203.0" layoutY="180.0" prefHeight="240.0" prefWidth="400.0" style="-fx-border-color: black;" />
             <TextField fx:id="usernameField" layoutX="376.0" layoutY="270.0" />
             <PasswordField fx:id="passwordField" layoutX="376.0" layoutY="316.0" />
-            <Button fx:id="loginBtn" defaultButton="true" layoutX="376.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleLoginBtnOnAction" text="Log in" />
-            <Label layoutX="241.0" layoutY="197.0" prefHeight="50.0" text="Welcome to Elite Box">
+            <Button fx:id="loginBtn" defaultButton="true" layoutX="376.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleLoginBtnOnAction" text="Log in">
                <font>
-                  <Font name="Mitr Medium" size="30.0" />
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font></Button>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="247.0" layoutY="200.0" prefHeight="50.0" text="Welcome to Elite Box">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="30.0" />
                </font>
             </Label>
             <Label fx:id="faultLabel" layoutX="242.0" layoutY="385.0" prefHeight="32.0" prefWidth="320.0">
@@ -34,22 +37,25 @@
                   <Font name="Mitr Medium" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="205.0" layoutY="73.0" text="The Elite Condo">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="209.0" layoutY="86.0" text="The Elite Condo" textAlignment="CENTER">
                <font>
-                  <Font name="Mitr Medium" size="50.0" />
+                  <Font name="Arial Rounded MT Bold" size="50.0" />
                </font>
             </Label>
-            <Label layoutX="295.0" layoutY="273.0" text="Username">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="295.0" layoutY="273.0" text="Username">
                <font>
-                  <Font name="Mitr Medium" size="12.0" />
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="296.0" layoutY="318.0" text="Password">
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="296.0" layoutY="318.0" text="Password">
                <font>
-                  <Font name="Mitr Medium" size="12.0" />
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="creditBtn" layoutX="603.0" layoutY="511.0" mnemonicParsing="false" onAction="#handleCreditBtnOnAction" text="Credit" />
+            <Button fx:id="creditBtn" contentDisplay="CENTER" layoutX="603.0" layoutY="511.0" mnemonicParsing="false" onAction="#handleCreditBtnOnAction" text="Credit" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="12.0" />
+               </font></Button>
          </children>
       </AnchorPane>
    </children>
