--- a/src/main/resources/roomlistpage.fxml
+++ b/src/main/resources/roomlistpage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,12 +12,12 @@
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="304.0" layoutY="62.0" prefHeight="50.0" prefWidth="192.0" text="Room List">
          <font>
-            <Font name="Mitr Medium" size="30.0" />
+            <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
       <Button fx:id="backBtn" layoutX="375.0" layoutY="505.0" mnemonicParsing="false" onAction="#handleBackBtnOnAction" prefHeight="30.0" prefWidth="50.0" text="Back">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
       <TableView fx:id="residentTable" layoutX="50.0" layoutY="170.0" prefHeight="260.0" prefWidth="700.0">
@@ -31,11 +32,15 @@
             <TableColumn fx:id="res3Col" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Resident 3" />
         </columns>
       </TableView>
-      <Button fx:id="refreshBtn" layoutX="650.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="30.0" prefWidth="100.0" text="Refresh" />
+      <Button fx:id="refreshBtn" layoutX="650.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="30.0" prefWidth="100.0" text="Refresh">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font></Button>
       <Label layoutX="50.0" layoutY="447.0" prefHeight="30.0" prefWidth="350.0" text="Double click on the room to &quot;Add resident&quot;">
          <font>
-            <Font name="Mitr Medium" size="15.0" />
+            <Font name="Arial Rounded MT Bold" size="15.0" />
          </font>
       </Label>
+      <Accordion />
    </children>
 </AnchorPane>
