--- a/src/main/resources/staffmenupage.fxml
+++ b/src/main/resources/staffmenupage.fxml
@@ -10,28 +10,32 @@
 <AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="condo.controller.staff.StaffMenuController">
    <children>
       <Label layoutY="144.0" prefHeight="100.0" prefWidth="801.0" style="-fx-border-color: black;" />
-      <Label layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="49.0" layoutY="46.0" prefHeight="50.0" prefWidth="140.0" text="Welcome" textAlignment="CENTER">
          <font>
-            <Font name="Mitr Medium" size="30.0" />
+            <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out" />
+      <Button fx:id="signOutBtn" layoutX="680.0" layoutY="59.0" mnemonicParsing="false" onAction="#handleSignOutBtnOnAction" style="-fx-background-color: none;" text="Sign out">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font></Button>
       <Label fx:id="nameLabel" alignment="CENTER" layoutX="460.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
          <font>
-            <Font name="Mitr Medium" size="20.0" />
+            <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
       <Label fx:id="idLabel" alignment="CENTER" layoutX="222.0" layoutY="47.0" prefHeight="50.0" prefWidth="140.0" textAlignment="CENTER">
          <font>
-            <Font name="Mitr Medium" size="20.0" />
+            <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
-      <TableView layoutX="74.0" layoutY="282.0" prefHeight="283.0" prefWidth="654.0">
+      <TableView fx:id="mailTable" layoutX="74.0" layoutY="282.0" prefHeight="283.0" prefWidth="654.0">
         <columns>
-          <TableColumn maxWidth="80.0" minWidth="80.0" text="Type" />
-          <TableColumn maxWidth="164.0" minWidth="164.0" prefWidth="164.0" text="Detail" />
-            <TableColumn maxWidth="107.0" minWidth="107.0" prefWidth="107.0" text="Date" />
-            <TableColumn maxWidth="107.0" minWidth="107.0" prefWidth="107.0" text="Time" />
-            <TableColumn maxWidth="132.0" minWidth="132.0" prefWidth="132.0" text="Staff" />
-            <TableColumn maxWidth="70.0" minWidth="70.0" prefWidth="70.0" text="Status" />
+          <TableColumn fx:id="typeCol" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" text="Type" />
+          <TableColumn fx:id="roomCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Room" />
+            <TableColumn fx:id="senderCol" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Sent from" />
+            <TableColumn fx:id="dateCol" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Date" />
+            <TableColumn fx:id="timeCol" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Time" />
+            <TableColumn fx:id="staffCol" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" text="Staff" />
+            <TableColumn fx:id="statusCol" maxWidth="80.0" minWidth="80.0" text="Status" />
         </columns>
       </TableView>
       <Button layoutX="10.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="70.0" style="-fx-background-color: none;">
@@ -39,24 +43,39 @@
             <Font name="Mitr Medium" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="addMailBtn" layoutX="119.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Add Mail">
+      <Button fx:id="addMailBtn" layoutX="70.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddMailBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Add Mail">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="listBtn" layoutX="401.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleListBtnOnAction" prefHeight="50.0" prefWidth="115.0" text="Room's List">
+      <Button fx:id="listBtn" layoutX="445.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleListBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Room List">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="changePassBtn" layoutX="540.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="140.0" text="Change Password">
+      <Button fx:id="changePassBtn" layoutX="588.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="140.0" text="Change Password">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="addRoomBtn" layoutX="262.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddRoomBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Add Room">
+      <Button fx:id="addRoomBtn" layoutX="320.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleAddRoomBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Add Room">
          <font>
-            <Font name="Mitr Medium" size="12.0" />
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="historyBtn" alignment="CENTER" layoutX="195.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleHistoryBtnOnAction" prefHeight="50.0" prefWidth="100.0" text="Mail History">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
+         </font>
+      </Button>
+      <Label layoutX="74.0" layoutY="565.0" prefHeight="30.0" prefWidth="265.0" text="Double click for more information">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="refreshBtn" layoutX="658.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleRefreshBtnOnAction" prefHeight="25.0" prefWidth="70.0" text="Refresh">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
    </children>
