--- a/src/main/resources/loginpage.fxml
+++ b/src/main/resources/loginpage.fxml
@@ -56,6 +56,7 @@
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
                </font></Button>
+            <Button fx:id="registerBtn" layoutX="203.0" layoutY="431.0" mnemonicParsing="false" onAction="#handleRegisterBtnOnAction" style="-fx-background-color: none;" text="Don't have an Resident account?" />
          </children>
       </AnchorPane>
    </children>
