--- a/src/main/resources/residentmenupage.fxml
+++ b/src/main/resources/residentmenupage.fxml
@@ -27,25 +27,23 @@
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font></Label>
-      <TableView layoutX="74.0" layoutY="282.0" prefHeight="283.0" prefWidth="654.0">
+      <TableView fx:id="mailTable" layoutX="74.0" layoutY="282.0" prefHeight="283.0" prefWidth="654.0">
         <columns>
-          <TableColumn prefWidth="156.0" text="Type of mail" />
-          <TableColumn minWidth="4.0" prefWidth="171.0" text="Date" />
-            <TableColumn prefWidth="162.0" text="Staff" />
-            <TableColumn prefWidth="164.0" text="Status" />
+          <TableColumn fx:id="typeCol" maxWidth="90.0" minWidth="90.0" prefWidth="90.0" text="Type" />
+          <TableColumn fx:id="roomCol" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" text="Room" />
+            <TableColumn fx:id="senderCol" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Sent from" />
+            <TableColumn fx:id="dateCol" maxWidth="10.0" minWidth="100.0" prefWidth="100.0" text="Date" />
+            <TableColumn fx:id="timeCol" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Time" />
+            <TableColumn fx:id="staffCol" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" text="Staff" />
+            <TableColumn fx:id="statusCol" maxWidth="80.0" minWidth="80.0" text="Status" />
         </columns>
       </TableView>
-      <Button fx:id="letterOnlyBtn" layoutX="137.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="85.0" text="Letter Only">
+      <Button fx:id="historyBtn" layoutX="250.0" layoutY="169.0" mnemonicParsing="false" onAction="#handleHistoryBtnOnAction" prefHeight="50.0" prefWidth="85.0" text="Mail History">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="docOnlyBtn" layoutX="292.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="110.0" text="Document Only">
-         <font>
-            <Font name="Arial Rounded MT Bold" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="parcelOnlyBtn" layoutX="460.0" layoutY="170.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="85.0" text="Parcel Only">
+      <Button fx:id="changePassBtn" layoutX="465.0" layoutY="170.0" mnemonicParsing="false" onAction="#handleChangePassBtnOnAction" prefHeight="50.0" prefWidth="130.0" text="Change Password">
          <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
