--- a/src/main/resources/staffmenupage.fxml
+++ b/src/main/resources/staffmenupage.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -78,5 +79,6 @@
             <Font name="Arial Rounded MT Bold" size="12.0" />
          </font>
       </Button>
+      <TextField fx:id="searchField" layoutX="74.0" layoutY="257.0" />
    </children>
 </AnchorPane>
